Fix Lists & Sidebars in RTL Mode + Fix Sidebar Overlap Issues

--- a/SCSS/Theme Rewrite/base/_file-explorer.scss
+++ b/SCSS/Theme Rewrite/base/_file-explorer.scss
@@ -1,4 +1,5 @@
-body {
+body,
+body.mod-rtl {
     //Vault Title
     --vault-name-font-size: 20px;
     --vault-name-font-weight: var(--font-bold);
