--- a/SCSS/Theme Rewrite/plugins-core/_tag-pane.scss
+++ b/SCSS/Theme Rewrite/plugins-core/_tag-pane.scss
@@ -23,8 +23,8 @@
     // margin-left: -3px;
 
     content: "#";
-    padding-right: 5px;
-    margin-left: 1px;
+    padding-inline-end: 5px;
+    margin-inline-start: 1px;
     position: relative;
     color: var(--tag-text);
     width: var(--size-4-4);
